# zos-server

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  ABSOLUTE_ZERO_RUST.md  AUTOMATED_BOOTSTRAP_SYSTEM.md  AUTOMORPHIC_FIELD_THEORY_PROOF.md  AUTOMORPHIC_TOOLS.md  BINARIES_FIXED.md  BINARY_GENERATION.md  BINARY_TOOLS.md  BOOTSTRAP.md  CHANGES.md  CLIP2SECURE_COMPLETE_PLAN.md  CLIP2SECURE_FINAL_SUMMARY.md  CLIP2SECURE_PLAN.md  CLIP2SECURE_SUMMARY.md  CROSS_PLATFORM.md  Cargo-workspace.toml  Cargo.toml  DEPENDENCY_OPTIMIZATION_SUMMARY.md  DEPLOYMENT_PLAN.md  DEV_SERVER.md  Dockerfile  FINAL_STATUS.md  FIXES_APPLIED.md  FIXME_REPORT.md  FUNCTION_CATALOG.md  GITHUB_ACTIONS_TROUBLESHOOTING.md  KETER_CRYSTAL_GROWTH.md  KIRO_RULES.md  LATTICE_SYSTEM.md  META_INTROSPECTOR_ANALYSIS.md  MONSTER_GROUP_SYMMETRIES.md  MONSTER_HYPOTHESIS.md  MetaIntrospectorCompression.lean  NIX_BUILD_SUCCESS.md  PIPELINE.md  PRODUCTION_DEPLOYMENT.md  README.md  (+197 more)
.cargo/: config.toml
.github/workflows/: build-release.yml  build.yml  docs.yml  lattice-test.yml  minimal-test.yml  no-external-actions.yml  simple-build.yml
MetaIntrospectorCompression/: Basic.lean
accounts/solfunmeme/: network.toml
auto-forker/: Cargo.toml
auto-forker/src/: main.rs
automorphic-tools/: Cargo.toml
automorphic-tools/src/: main.rs
browser-extension/: background.js  content.js  manifest.json  popup.html  popup.js
build_archive/build_20260108_230828_4b87f258/: Cargo.toml  MANIFEST.txt
build_logs/20260108_230828_4b87f258/: summary.txt  (+1 more)
canonical-store/: Cargo.toml
clippy-lints/: dead_code_eliminator.rs
compilation-analysis/: README.md  permutation-matrix.csv
complete-rust-analyzer/: Cargo.toml
crate-analyzer/: Cargo.toml  cargo_lock_list.txt
crate-indexer/: Cargo.toml  universal_crate_index.json  universal_crate_index.md
dep-ranker/: Cargo.toml
dependency-graph/: Cargo.toml
docs/: README.md  style.css
examples/: LOGARITHMIC_COMPRESSION_PROOF.md  clifford_memory_demo.rs  clip2secure_usage.rs  convergence_analysis.rs  example_build.rs  lean4_foundation.rs  llm_git_demo.rs  logarithmic_compression_demo.rs  mass_orbit_calc.rs  meta_introspector_tycoon_dashboard.html  monster_group_demo.rs  orbit_calculator.rs  plantation_harvest.rs  simple_capstone.rs  tycoon_dashboard_demo.rs  unity_goal_demo.rs
examples_broken/: example_patched_code.rs  llm_git_demo.rs  p2p_server.rs  syscall_stripping_example.rs  test_file.rs  test_lattice.rs
experimental_features/: clip2secure_lints.rs  code_deduplicator.rs  crate_fork_analyzer.rs  foundational_convergence.rs  graph_loader.rs  markov-directory-predictor.rs  repo-word-indexer.rs  repo_eigenvector.rs  repo_scanner.rs  repo_spider.rs  simple_graph.rs  simple_markov_analyzer.rs  simple_word_index.rs
fork-checker/: Cargo.toml
fork-status/: Cargo.toml  missing_external_deps.txt  rustc_fork_status.txt
git-config-extractor/: Cargo.toml
gitmodules-extractor/: Cargo.toml  gitmodules_urls.txt
gitmodules-unifier/: Cargo.toml  gitmodules_list.txt
graph-loader/: Cargo.toml
lattice_test_results/: summary.md
markov-predictor/: Cargo.toml
meta-introspector-tycoon/: Cargo.toml  README.md
meta-introspector-tycoon/config/wireguard/: wg0-client-linux.conf  wg0-client-windows.conf  wg0-server.conf
meta-introspector-tycoon/scripts/: deploy-linux-server.sh  deploy-oci-server.sh  deploy-windows-client.ps1
meta-introspector-tycoon/src/: community_node.rs  gpu_dashboard.rs  main.rs
remote-checker/: Cargo.toml
remote-fork-mapper/: Cargo.toml  crate_directory_cache.txt  directory_remote_cache.txt
repo-graph/: Cargo.toml
repo-mapper/: Cargo.toml
repo-query/: Cargo.toml
repo-scanner/: Cargo.toml
rust-dep-analyzer/: Cargo.toml  rust_dep_analysis.txt
scripts/: capture_build_log.sh
src/: auth.rs  auth_manager.rs  auth_system.rs  automorphic_bootstrap.rs  automorphic_compiler.rs  binary_classifier.rs  binary_inspector.rs  biosemiotic_payment.rs  block_collector_plugin.rs  block_routes.rs  blockchain_ingestor.rs  bytecode_manipulator.rs  cache.rs  cargo2plugin_loader.rs  cicd_dashboard.rs  client_telemetry.rs  clifford_memory_model.rs  clip2secure_macros.rs  clippy_security_lints.rs  code_transformation_graph.rs  community_participation.rs  compiler_band_pass.rs  compiler_integration.rs  compiler_polyfill_system.rs  complexity_types.rs  container_build_patcher.rs  container_runtime.rs  convergence_analyzer.rs  core.rs  core_macros.rs  cpu_optimizer.rs  crate_scanner.rs  demo_macro.rs  distributed_gpu_dashboard.rs  dual_model_prover.rs  eigenmatrix_compression.rs  entropy_scanner.rs  execution_trace_analyzer.rs  exploit_detector.rs  feature_lattice.rs  (+105 more)
telemetry/: system_20260108_230828_4b87f258.csv
templates/: dashboard.html  fingerprint.js  plugin_template.rs
timeline-builder/: Cargo.toml
url-extractor/: Cargo.toml  all_github_repos.txt  all_github_urls.txt
www/: app.html  index.html  manifest.json  solana_p2p_plugin.d.ts  solana_p2p_plugin.js  solana_p2p_plugin_bg.wasm  solana_p2p_plugin_bg.wasm.d.ts  test.html
zos-analysis/: Cargo.toml
zos-bootstrap/: Cargo.toml
zos-build-macros/: Cargo.toml
zos-build-macros/src/: broken.rs  future.rs  lib.rs
zos-community-economy/: Cargo.toml
zos-dashboard-wasm/: Cargo.toml
zos-dashboard-wasm/src/: lib.rs
zos-deploy/: Cargo.toml
zos-deploy/src/: main.rs
zos-libp2p/: Cargo.toml
zos-macros/: Cargo.toml
zos-minimal-server/: Cargo.toml
zos-minimal-server/src/: main.rs
zos-oci/: Cargo.toml
zos-oracle/: Cargo.toml
zos-oracle/src/: ai_marketplace.rs  block_port_manager.rs  bootstrap_engine.rs  dev_workflow.rs  lib.rs  libp2p_verbs.rs  plugin_loader.rs  ranking_system.rs  retro_ai_games.rs  user_dashboard.rs  user_fingerprint.rs  wallet_auth.rs
zos-plan/: Cargo.toml
zos-plugins/: Cargo.toml
zos-public-gateway/: Cargo.toml
zos-retro-games/: Cargo.toml
zos-stage1-server/: Cargo.toml
zos-stage1-server/src/: main.rs
zos-telegram-bot/: Cargo.toml
zos-telegram-bot/src/: lib.rs
zos-traits/: Cargo.toml
zos-types/: Cargo.toml
zos-unix-accounts/: Cargo.toml
(+227 files in other folders)
