[package]
name = "zos-server"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0"

[[bin]]
name = "zos_server"
path = "src/main.rs"

[[bin]]
name = "zos-dev-server"
path = "src/bin/zos-dev-server.rs"

[[bin]]
name = "zos-dev-minimal"
path = "src/bin/zos-dev-server-minimal.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
sha2 = "0.10"
rand = "0.8"
toml = "0.8"
notify = "6.0"
libloading = "0.8"
libp2p = "0.54"
tempfile = "3.0"
md5 = "0.7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
chrono = "0.4"

[workspace]
members = [
    "cargo-watch",
    "zos-macros",
    "zos-traits",
    "zos-types",
    "zos-build-macros",
    "zos-plan",
    "zos-deploy",
    "zos-oracle",
    "zos-unix-accounts",
    "zos-retro-games",
    "zos-minimal-server",
    "zos-libp2p",
    "zos-plugins",
    "zos-bootstrap",
    "zos-oci",
    "zos-analysis"
]
resolver = "2"
