[package]
name = "zos-server"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0"

[[bin]]
name = "zos_server"
path = "src/main.rs"

[[bin]]
name = "zos-dev-server"
path = "src/bin/zos-dev-server.rs"

[[bin]]
name = "zos-dev-minimal"
path = "src/bin/zos-dev-server-minimal.rs"

[[bin]]
name = "zos-dev-launch"
path = "src/bin/zos-dev-launch.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
axum-otel-metrics = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id"] }
tower-sessions = "0.12"
axum-login = "0.15"
jsonwebtoken = "9.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
rayon = "1.10"
opentelemetry-otlp = { version = "0.14", features = ["tokio"] }
opentelemetry-stdout = { version = "0.2", features = ["trace"] }
opentelemetry-jaeger = { version = "0.20", features = ["rt-tokio"] }
slog = "2.7"
slog-json = "2.6"
slog-async = "2.8"
async-trait = "0.1"
sha2 = "0.10"
rand = "0.8"
toml = "0.8"
notify = "6.0"
libloading = "0.8"
libp2p = "0.54"
tempfile = "3.0"
# Clippy lint dependencies
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", optional = true }
rustc_hir = { git = "https://github.com/rust-lang/rust", optional = true }
rustc_lint = { git = "https://github.com/rust-lang/rust", optional = true }
rustc_session = { git = "https://github.com/rust-lang/rust", optional = true }
rustc_span = { git = "https://github.com/rust-lang/rust", optional = true }
rustc_middle = { git = "https://github.com/rust-lang/rust", optional = true }

# Procedural macro dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit-mut"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
chrono = "0.4"

[build-dependencies]
chrono = "0.4"
syn = { version = "2.0", features = ["full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"

[workspace]
members = [
    "cargo-watch",
    "zos-macros",
    "zos-traits",
    "zos-types",
    "zos-build-macros",
    "zos-plan",
    "zos-deploy",
    "zos-oracle",
    "zos-unix-accounts",
    "zos-retro-games",
    "zos-minimal-server",
    "zos-libp2p",
    "zos-plugins",
    "zos-bootstrap",
    "zos-oci",
    "zos-analysis"
]
resolver = "2"
