[package]
name = "meta-introspector-tycoon"
version = "1.0.0"
edition = "2021"
description = "Revolutionary computational tycoon with infinite complexity"

[[bin]]
name = "tycoon-server"
path = "src/main.rs"

[[bin]]
name = "gpu-dashboard"
path = "src/gpu_dashboard.rs"

[[bin]]
name = "community-node"
path = "src/community_node.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy = { version = "0.12", features = ["dynamic_linking"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
rayon = "1.10"

[features]
default = ["server"]
server = []
client = []
community = []
