[package]
name = "zos-stage1-server"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
libp2p = "0.53"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

[features]
default = ["stage1"]
stage1 = []
stage2 = ["stage1"]
stage3 = ["stage2"]
stage4 = ["stage3"]
